# Kvadratka

./: CMakeLists.txt  _projects_2_kvadratka4_2quadric_8h_source.html  main.c  quadric.c  quadric.h  test.txt  testing_system.c
